fixed z-index

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   border-radius: 5px;
   z-index: 1;
-  opacity: 1;
 }
 
 .pregame-container {
@@ -48,6 +47,7 @@ body {
 }
 
 .pregame.remove {
+  z-index: -1;
   opacity: 0;
 }
 
